# CC-232

./: .gitignore  README.md
Libreria_cc232/Semana1/: actividad.md
Libreria_cc232/Semana2/: actividad.md  ejercicios.md
Libreria_cc232/Semana2/Espinoza_Sandoval_pc2/: CMakeLists.txt
Libreria_cc232/Semana2/Espinoza_Sandoval_pc2/benchmark/: bench_stackeditor.cpp
Libreria_cc232/Semana2/Espinoza_Sandoval_pc2/demos/: demo_stackeditor.cpp
Libreria_cc232/Semana2/Espinoza_Sandoval_pc2/include/: Stack.h  StackEditor.h
Libreria_cc232/Semana2/Espinoza_Sandoval_pc2/internal_tests/: test_internal_stackeditor.cpp
Libreria_cc232/Semana2/Espinoza_Sandoval_pc2/public_tests/: test_public_bracketsequence.cpp  test_public_stackeditor.cpp
Libreria_cc232/Semana2/Espinoza_Sandoval_pc2/resultados/: benchmark.md
Libreria_cc232/Semana3/: Actividad3-CC232.md  README.md  actividad.md
Libreria_cc232/Semana3/demos/: demo_contiguous_vs_linked.cpp  demo_linked_adapters.cpp  demo_morin_deng_bridge.cpp
Libreria_cc232/Semana3/lecturas/: Lectura6-Deng.md
Libreria_cc232/Semana3/sustentacion/: preguntas_semana3.md  rubrica_semana3.md
Practicas/Practica2_CC232/: Indicaciones.md
Practicas/Practica2_CC232/Espinoza_Sandoval_pc2/: CMakeLists.txt  README.md  demo
Practicas/Practica2_CC232/Espinoza_Sandoval_pc2/benchmark/: bench_bracketsequence.cpp
Practicas/Practica2_CC232/Espinoza_Sandoval_pc2/demos/: demo_avltree.cpp  demo_bracketsequence.cpp  demo_stackeditor.cpp
Practicas/Practica2_CC232/Espinoza_Sandoval_pc2/docs/: BracketSequence.md
Practicas/Practica2_CC232/Espinoza_Sandoval_pc2/include/: AVLList.h  AVLTree.h  AVLWeightedGeneralTree.h  AVLWeightedList.h  BracketSequence.h  Stack.h  StackEditor.h
Practicas/Practica2_CC232/Espinoza_Sandoval_pc2/internal_tests/: test_internal_bracketsequence.cpp
Practicas/Practica2_CC232/Espinoza_Sandoval_pc2/public_tests/: test_public_bracketsequence.cpp
Practicas/Practica2_CC232/Espinoza_Sandoval_pc2/src/: BracketSequence.cpp
Practicas/Practica2_CC232/Espinoza_Sandoval_pc2/video/: link.txt
Semana0/: Ejercicios0.md  INSTRUCCIONES_Ejercicios0_v4.2.md  Pruebas_Unitarias.md
Semana0/Proyecto0/: CMakeLists.txt
Semana0/Proyecto0/apps/: demo_const_refs.cpp
Semana0/Proyecto0/include/: mini_test.h
Semana0/Proyecto0/src/: warmup_vector.cpp
Semana0/Proyecto0/tests/: test_warmup_vector.cpp
